syntax = "proto3";

package api.verifyCode;

option go_package = "verify-code/api/verifyCode;verifyCode";
option java_multiple_files = true;
option java_package = "api.verifyCode";

service VerifyCode {
	rpc CreateVerifyCode (CreateVerifyCodeRequest) returns (CreateVerifyCodeReply);
	rpc UpdateVerifyCode (UpdateVerifyCodeRequest) returns (UpdateVerifyCodeReply);
	rpc DeleteVerifyCode (DeleteVerifyCodeRequest) returns (DeleteVerifyCodeReply);
	rpc GetVerifyCode (GetVerifyCodeRequest) returns (GetVerifyCodeReply);
	rpc ListVerifyCode (ListVerifyCodeRequest) returns (ListVerifyCodeReply);
}
enum TYPE{
	DEFAULT = 0;
	DIGIT = 1;
	LETTER =2;
	MIXED =3;
}
message CreateVerifyCodeRequest {}
message CreateVerifyCodeReply {}

message UpdateVerifyCodeRequest {}
message UpdateVerifyCodeReply {}

message DeleteVerifyCodeRequest {}
message DeleteVerifyCodeReply {}
// 接口请求参数
message GetVerifyCodeRequest {
	// 验证码长度
	int32 length = 1;
  // 验证码类型
	TYPE type = 2;
}
//接口返回结构
message GetVerifyCodeReply {
	string code = 1;
}

message ListVerifyCodeRequest {}
message ListVerifyCodeReply {}